--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,14 +7,17 @@
   - name: update repo index
     apt:
       update_cache: yes
+    when: ansible_distribution in ["Ubuntu", "Debian"]
 
   - name: install apache2 package
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution in ["Ubuntu", "Debian"]  
     
   - name: php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution in ["Ubuntu", "Debian"]
       
