--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,14 +3,25 @@
 - hosts: all
   become: true
   tasks:
-
-  - name: install apache package and php support for apache
-    package:
+  
+  - name: install apache package and php for Ubuntu
+    apt:
       name: 
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
+        - apache2
+        - libapache2-mod-php
       state: latest
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: install apache package and php for CentOS
+    package:
+      name: 
+        - httpd
+        - php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "CentOS"  
+    
      
     
  
