--- a/site.yml
+++ b/site.yml
@@ -34,25 +34,6 @@
       mode: '0755'
       owner: root
       group: root
-    
-
-  - name: install git package
-    tags: git
-    package:
-      name: git
-      state: latest
-
-  - name: install vim package
-    tags: vim
-    package:
-      name: vim
-      state: latest
-
-  - name: install wget package
-    tags: wget
-    package:
-      name: wget
-      state: latest
 
 - hosts: web_servers
   become: true
@@ -75,6 +56,30 @@
         - php
       state: latest
     when: ansible_distribution == "CentOS"
+
+  - name: start httpd service(CentOS)
+    tags: apache,httpd,centos
+    service:
+      name: httpd
+      state: started
+      enabled: true
+    when: ansible_distribution == "CentOS"
+
+  - name: change email address for admin
+    tags: apache,apache2,httpd
+    lineinfile: 
+      path: /etc/httpd/conf/httpd.conf
+      regexp: '^ServerAdmin'
+      line: ServerAdmin one-of-my-email-2@some.com
+    when: ansible_distribution == "CentOS"
+    register: httpd_variable
+
+  - name: restart httpd service (CentOS)
+    tags: apache,apache2,httpd
+    service:
+      name: httpd
+      state: restarted
+    when: httpd_variable.changed
 
   - name: copy index.html file for site
     tags: apache,apache2,httpd
