--- a/site.yml
+++ b/site.yml
@@ -20,115 +20,29 @@
 
 - hosts: all
   become: true
-  tasks:
-
-  - name: add ssh key for simone
-    tags: always
-    authorized_key:
-      user: simone
-      key: "{{ lookup('file', '~/.ssh/ansible.pub') }}"
- 
+  roles:
+    - base
 
 - hosts: workstations
   become: true
-  tasks:
-
-  - name: install unzip
-    package:
-      name: unzip
-  
-  - name: install terraform
-    unarchive:
-      src: https://releases.hashicorp.com/terraform/1.5.0/terraform_1.5.0_linux_amd64.zip
-      dest: /usr/local/bin/
-      remote_src: yes
-      mode: '0755'
-      owner: root
-      group: root
+  roles:
+    - workstations
 
 - hosts: web_servers
   become: true
-  tasks:
+  roles:
+    - web_servers
   
-  - name: install apache package and php for Ubuntu
-    tags: apache,apache2,ubuntu
-    apt:
-      name: 
-        - apache2
-        - libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache package and php for CentOS
-    tags: apache,httpd,centos
-    package:
-      name: 
-        - httpd
-        - php
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: start httpd service(CentOS)
-    tags: apache,httpd,centos
-    service:
-      name: httpd
-      state: started
-      enabled: true
-    when: ansible_distribution == "CentOS"
-
-  - name: change email address for admin
-    tags: apache,apache2,httpd
-    lineinfile: 
-      path: /etc/httpd/conf/httpd.conf
-      regexp: '^ServerAdmin'
-      line: ServerAdmin one-of-my-email-2@some.com
-    when: ansible_distribution == "CentOS"
-    register: httpd_variable
-
-  - name: restart httpd service (CentOS)
-    tags: apache,apache2,httpd
-    service:
-      name: httpd
-      state: restarted
-    when: httpd_variable.changed
-
-  - name: copy index.html file for site
-    tags: apache,apache2,httpd
-    copy:
-      src: default_site.html
-      dest: /var/www/html/index.html
-      owner: root
-      group: root
-      mode: '0644'
-   
-    
 - hosts: db_servers
   become: true
-  tasks:
-
-  - name: install mariadb package (CentOS)
-    tags: mariadb,centos,db
-    package:
-      name: mariadb
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: install mariadb package (Ubuntu)
-    tags: mariadb,ubuntu,db
-    apt:
-      name: mariadb-server
-      state: latest
-    when: ansible_distribution == "Ubuntu"
+  roles:
+    - db_servers
 
 - hosts: file_servers
   become: true
-  tasks:
+  roles:
+    - file_servers
 
-  - name: install samba package 
-    tags: samba
-    package:
-      name: samba
-      state: latest
     
      
     
