--- a/roles/web_servers/tasks/main.yaml
+++ b/roles/web_servers/tasks/main.yaml
@@ -1,50 +1,83 @@
-- name: install apache package and php for Ubuntu
-  tags: apache,apache2,ubuntu
-  apt:
-    name: 
-      - apache2
-      - libapache2-mod-php
-    state: latest
-  when: ansible_distribution == "Ubuntu"
-
-- name: install apache package and php for CentOS
-  tags: apache,httpd,centos
+- name: install web server packages
+  tags: apache,apache2,centos,httpd,ubuntu
   package:
-    name: 
-      - httpd
-      - php
+    name:
+      - "{{ apache_package_name }}"
+      - "{{ php_package_name }}"
     state: latest
-  when: ansible_distribution == "CentOS"
 
-- name: start httpd service(CentOS)
-  tags: apache,httpd,centos
+- name: start and enable apache
+  tags: apache,centos,httpd
   service:
-    name: httpd
+    name: "{{ apache_service }}"
     state: started
-    enabled: true
-  when: ansible_distribution == "CentOS"
+    enabled: yes
 
-- name: change email address for admin
-  tags: apache,apache2,httpd
-  lineinfile: 
+- name: change e-mail address for admin
+  tags: apache,centos,httpd
+  lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regexp: '^ServerAdmin'
-    line: ServerAdmin one-of-my-email-2@some.com
+    line: ServerAdmin somebody@somewhere.com
   when: ansible_distribution == "CentOS"
-  register: httpd_variable
-
-- name: restart httpd service (CentOS)
-  tags: apache,apache2,httpd
-  service:
-    name: httpd
-    state: restarted
-  when: httpd_variable.changed
-
-- name: copy index.html file for site
+  notify: restart_apache
+  
+- name: copy html file for site
   tags: apache,apache2,httpd
   copy:
     src: default_site.html
     dest: /var/www/html/index.html
     owner: root
     group: root
-    mode: '0644'
+    mode: 0644
+
+# - name: install apache package and php for Ubuntu
+#   tags: apache,apache2,ubuntu
+#   apt:
+#     name: 
+#       - apache2
+#       - libapache2-mod-php
+#     state: latest
+#   when: ansible_distribution == "Ubuntu"
+
+# - name: install apache package and php for CentOS
+#   tags: apache,httpd,centos
+#   package:
+#     name: 
+#       - httpd
+#       - php
+#     state: latest
+#   when: ansible_distribution == "CentOS"
+
+# - name: start httpd service(CentOS)
+#   tags: apache,httpd,centos
+#   service:
+#     name: httpd
+#     state: started
+#     enabled: true
+#   when: ansible_distribution == "CentOS"
+
+# - name: change email address for admin
+#   tags: apache,apache2,httpd
+#   lineinfile: 
+#     path: /etc/httpd/conf/httpd.conf
+#     regexp: '^ServerAdmin'
+#     line: ServerAdmin one-of-my-email-2@some.com
+#   when: ansible_distribution == "CentOS"
+#   register: httpd_variable
+
+# - name: restart httpd service (CentOS)
+#   tags: apache,apache2,httpd
+#   service:
+#     name: httpd
+#     state: restarted
+#   when: httpd_variable.changed
+
+# - name: copy index.html file for site
+#   tags: apache,apache2,httpd
+#   copy:
+#     src: default_site.html
+#     dest: /var/www/html/index.html
+#     owner: root
+#     group: root
+#     mode: '0644'
