--- a/host_vars/192.168.56.10.yml
+++ b/host_vars/192.168.56.10.yml
@@ -1,3 +1,8 @@
 apache_package_name: httpd
 apache_service: httpd
 php_package_name: php
+ssh_users:
+  - vagrant
+  - ubuntu
+  - simone
+ssh_template_file: sshd_config_centos.j2
