--- a/roles/base/handlers/main.yml
+++ b/roles/base/handlers/main.yml
@@ -1,5 +1,6 @@
 - name: restart_sshd
-  service:
-    name: sshd
-    state: restarted
-    
+  ansible.builtin.systemd_service:
+    daemon_reload: true
+  # service:
+  #   name: sshd
+  #   state: restarted
